--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,13 @@
 # main links
 main:
-  - title: "Quick-Start Guide"
-    url: https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/
-  # - title: "About"
+  - title: "Home"
+    url: /about
+  - title: "Project"
+    url: /project/
+#  - title: "Posts"
+#    url: /posts/
+  - title: "Blogs"
+    url: /blogs/
   #   url: https://mmistakes.github.io/minimal-mistakes/about/
   # - title: "Sample Posts"
   #   url: /year-archive/
